force-app/main/default/objects/Material__c/Material__c.object-meta.xml
<CustomObject>
    <description>Material defines a physical item that will be shipped to a Location to by a Fulfillment Center. Material is related to Fulfillment Center and Job Material.</description>
    <label>Material</label>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>