force-app/main/default/objects/Material__c/fields/BoxSize__c.field-meta.xml
<CustomField>
    <fullName>BoxSize__c</fullName>
    <label>Box Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>