force-app/main/default/objects/Material__c/fields/EstimatedCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCostPerUnit__c</fullName>
    <formula>FulfillmentBundling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost Per Unit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>