force-app/main/default/objects/Material__c/fields/FulfillmentBundling__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentBundling__c</fullName>
    <label>Fulfillment &amp; Bundling(Kit/ALaCarte) ($)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>