force-app/main/default/objects/Material__c/fields/FulfillmentCenter__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentCenter__c</fullName>
    <label>Fulfillment Center</label>
    <referenceTo>FulfillmentCenter__c</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>