force-app/main/default/objects/Material__c/fields/FulfillmentCenterName__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentCenterName__c</fullName>
    <formula>FulfillmentCenter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Center Name</label>
    <type>Text</type>
</CustomField>