force-app/main/default/objects/Material__c/fields/IsEditable__c.field-meta.xml
<CustomField>
    <fullName>IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Receiving ID and Custom Description are editable, when adding Materials to Project Service, if this is checked.</description>
    <inlineHelpText>Receiving ID and Custom Description are editable, when adding Materials to Project Service, if this is checked.</inlineHelpText>
    <label>Editable Custom Fields</label>
    <type>Checkbox</type>
</CustomField>