force-app/main/default/objects/Material__c/fields/Kit__c.field-meta.xml
<CustomField>
    <fullName>Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit</label>
    <type>Checkbox</type>
</CustomField>